<resources>
    <string name="app_name">HW01</string>
    <string name="bill_total">Bill Total:</string>
    <string name="enter_bill_value">Enter Bill Value</string>
    <string name="tip_percent">Tip %:</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="custom">Custom</string>
    <string name="custom_label">Custom:</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="exit_button_text">Exit</string>
    <string name="enter_bill_total">Enter Bill Total</string>
    <string name="space_percent">" %"</string>
</resources>